--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ghdl (0.35-0~gekkio1~bionic1) bionic; urgency=medium
+
+  * Backport for Bionic
+
+ -- Joonas Javanainen <joonas.javanainen@gmail.com>  Wed, 12 Dec 2018 21:40:07 +0200
+
 ghdl (0.35-0~gekkio1~cosmic3) cosmic; urgency=medium
 
   * Add default clang dependency
